--- a/src/app/student-search/student-search.component.html
+++ b/src/app/student-search/student-search.component.html
@@ -6,10 +6,10 @@
             <div class="row g-3">
                 <div class="col col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label for="" class="form-label">Student Admisiion Number</label>
-                    <input type="text" class="form-control">
+                    <input name="admno" [(ngModel)]="admno" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <button class="btn btn-success">Search</button>
+                    <button (click)="search()" class="btn btn-success">Search</button>
                 </div>
             </div>
         </div>
